syntax = "proto3";

option csharp_namespace = "CareerCloud.gRPC.Protos";

package CareerCloud.gRPC;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service SecurityLoginsLog{
	rpc ReadSecurityLoginsLog (SecurityLoginsLogIdRequest) returns (SecurityLoginsLogPayload);
	rpc GetAllSecurityLoginsLog (google.protobuf.Empty) returns (AllSecurityLoginsLogPayload);
	rpc CreateSecurityLoginsLog (SecurityLoginsLogPayload) returns (google.protobuf.Empty);
	rpc UpdateSecurityLoginsLog (SecurityLoginsLogPayload) returns (google.protobuf.Empty);
	rpc DeleteSecurityLoginsLog (SecurityLoginsLogPayload) returns (google.protobuf.Empty);
}

message SecurityLoginsLogIdRequest{
	string Id =1;
}

message SecurityLoginsLogPayload {
	string Id = 1;
	string Login = 2;
	string SourceIP = 3;
	google.protobuf.Timestamp LogonDate = 4;
	bool IsSuccesful = 5;
}

message AllSecurityLoginsLogPayload {
	repeated SecurityLoginsLogPayload SecurityLoginLogs = 1;
}